<resources>
    <string name="app_name">WebProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_data">DataActivity</string>

    <string name="title">Membership Form</string>
    <string name="name">your name</string>
    <string name="address">your address</string>
    <string name="submit">submit</string>
    <string name="conditions">i have read, understood and accepted membership rules</string>


    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>